--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -59,6 +59,7 @@
     - paper
   type: Paper
   selected: true
+  index: 1
 
 - id: touchpivot
   title: "TouchPivot: Blending WIMP & Post-WIMP Interfaces for Data Exploration on Tablet Devices"
@@ -81,6 +82,7 @@
     - paper
   type: Paper
   selected: true
+  index: 0
   
 - id: cloakingnote
   title: "CloakingNote: A Novel Desktop Interface for Subtle Writing Using Decoy Texts"
@@ -143,6 +145,7 @@
     - journal
     - paper
   type: Paper
+  index: 3
 
 - id: panene
   title: "PANENE: A Progressive Algorithm for Indexing and Querying Approximate k-Nearest Neighbors"
@@ -163,6 +166,7 @@
     - paper
   type: Paper
   selected: true
+  index: 2
 
 - id: mdm
   title: "A Declarative Rendering Model for Multiclass Density Maps"
@@ -186,6 +190,7 @@
     - paper
   type: Paper
   selected: true
+  index: 1
 
 
 
@@ -326,6 +331,7 @@
     - conference
     - paper
   type: Paper
+  index: 2
 
 - id: shouldersurfing
   title: "Towards a Broader Understanding of Shoulder-surfing Problems"
