--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,24 @@
+- id: proreveal
+  title: "ProReveal: Progressive Visual Analytics with Safeguards"
+  year: 2020
+  authors:
+    - Jaemin Jo
+    - Sehi L'Yi
+    - Bongshin Lee
+    - Jinwook Seo
+  journal: 
+    title: IEEE Transactions on Visualization and Computer Graphics
+    abbr: TVCG
+    ea: true
+    url: https://www.computer.org/csdl/journal/tg
+  url: /assets/ProReveal.pdf
+  attrs:
+    - international    
+    - journal
+    - paper
+  type: Paper
+  selected: true
+
 - id: disentangling
   title: "Disentangled Representation of Data Distributions in Scatterplots"
   year: 2019
