--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- id: dissertation
+  title: Designing Progressive Visualization Systems for Exploring Large-scale Data
+  pdf: /assets/Jaemin_Jo_Dissertation.pdf
+  hidden: true
+
 - id: proreveal
   title: ProReveal
   pdf: /assets/ProReveal.pdf
