--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -123,7 +123,7 @@
     - Bongshin Lee
     - Jinwook Seo
   proc: 
-    title: Proceedings of the 35rd Annual ACM Conference on Human Factors in Computing Systems
+    title: Proceedings of the 35th Annual ACM Conference on Human Factors in Computing Systems
     abbr: CHI 2017
     url: https://chi2017.acm.org/
     page: 2660-2671
