--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Jaemin Jo
-email: jmjo@hcil.snu.ac.kr
+email: jmjo@skku.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Jaemin Jo is a PhD student at Human Computer Interaction Laboratory in Seoul National University. Interested in Information Visualization, Progressive Visual Analytics, and Pen and Touch Interactions.
+  Jaemin Jo is an assistant professor at College of Computing, Sungkyunkwan University. Interested in Information Visualization, Progressive Visual Analytics, and Pen and Touch Interactions.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.jaeminjo.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  e-
